# family-tree-example

./: CMakeLists.txt  README  README.md
include/: FamilyTree.h  Person.h  Relative.h
src/: FamilyTree.cpp  fam.cpp
